@@ -1,4 +1,5 @@
 - Support proxied IP addresses with X-Forwarded-For header [#3]
+- Fix database schema not allowing for IPv6 addresses
 
 Akismet 1.0.0-pl
 ---------------------------------
